--- a/index.html
+++ b/index.html
@@ -2,6 +2,31 @@
 <html>
 <head>
     <title>Chat GPT API</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script>
+        function sendMessage() {
+            var message = $('#message-input').val();
+            if (message.trim() === '') return;
+            
+            var data = { 'message': message };
+
+            $.ajax({
+                url: '/chat',
+                type: 'POST',
+                dataType: 'json',
+                contentType: 'application/json',
+                data: JSON.stringify(data),
+                success: function(response) {
+                    var reply = response.message;
+                    $('#chat-log').append('<div class="message"><span class="user-message">' + message + '</span><span class="bot-message">' + reply + '</span></div>');
+                    $('#message-input').val('');
+                },
+                error: function(error) {
+                    console.log('Error:', error);
+                }
+            });
+        }
+    </script>
 </head>
 <body>
     <div id="chat-container">
@@ -11,8 +36,5 @@
             <button onclick="sendMessage()">Send</button>
         </div>
     </div>
-
-    <script src="script.js"></script>
 </body>
 </html>
-
