--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <title>Chatbot</title>
 </head>
 <body>
-    <h1>Chatbot 3</h1>
+    <h1>Chatbot4</h1>
     <div id="chat-container"></div>
-    <input id="user-input" type="text" placeholder="Ask a question">
-    <button id="submit-btn">Submit</button>
+    <form id="question-form">
+        <input id="user-input" type="text" placeholder="Ask a question">
+        <button id="submit-btn">Submit</button>
+    </form>
 
     <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
+
